fix(input): increase `Input` font size to 16px on small screens to prevent iOS zoom in

--- a/src/components/input.module.css
+++ b/src/components/input.module.css
@@ -20,6 +20,11 @@
 
   font-size: 14px;
 
+  /* Prevent zoom-in on mobile */
+  @media (width < 40rem) {
+    font-size: 16px;
+  }
+
   &[data-has-error="true"] {
     outline: 1px solid var(--red-7);
     border-color: var(--red-7);
